--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,6 @@
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-cli-update": "^0.56.0",
     "ember-data": "~3.24.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
@@ -76,8 +75,8 @@
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "sass": "^1.49.7",
-    "zxcvbn": "^4.4.2",
-    "webpack": "^5.69.1"
+    "webpack": "^5.69.1",
+    "zxcvbn": "^4.4.2"
   },
   "engines": {
     "node": ">= 14.*"
